--- a/first/templates/info.html
+++ b/first/templates/info.html
@@ -31,111 +31,148 @@
                                         </tr>
                                         <tr>
                                             <td>3 Павильон № 5 «Физика»</td>
+                                            <td><img src="{% static 'img/5.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>4 Павильон № 10 «Стандарты»</td>
+                                            <td><img src="{% static 'img/10.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>5 Павильон № 11 «Металлургия» («Казахстан»)</td>
+                                            <td><img src="{% static 'img/11.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>6 Павильон № 12 «Профсоюзы»</td>
+                                            <td><img src="{% static 'img/12.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>7 Павильон № 13 «Здоровье»</td>
+                                            <td><img src="{% static 'img/13.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>8 Павильон № 14 «Вычислительная техника»</td>
+                                            <td><img src="{% static 'img/14.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>9 Павильон № 15 «Радиоэлектроника и связь»</td>
+                                            <td><img src="{% static 'img/15.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>10 Фонтан «Дружба народов СССР»</td>
+                                            <td><img src="{% static 'img/ф_дружба.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>11 Павильон № 71 «Атомная энергия»</td>
+                                            <td><img src="{% static 'img/71.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>12 Павильон № 68 «Армения»</td>
+                                            <td><img src="{% static 'img/68.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>13 Павильон № 67 «Советская печать»</td>
+                                            <td><img src="{% static 'img/67.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>14 Павильон № 66 «Культура»</td>
+                                            <td><img src="{% static 'img/66.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>15 Павильон № 64 «Оптика»</td>
+                                            <td><img src="{% static 'img/64.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>16 Офисы (бывш. ресторан «Подкова»)</td>
+                                            <td><img src="{% static 'img/16.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>17 Фонтан «Каменный цветок»</td>
+                                            <td><img src="{% static 'img/ф_кам_цветок.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>18 Павильон № 17 «Лесная промышленность»</td>
+                                            <td><img src="{% static 'img/17.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>19 Павильон №19 Планируемая область застройки</td>
+                                            <td><img src="{% static 'img/19.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>20 Павильон № 18 «Белоруссия»</td>
+                                            <td><img src="{% static 'img/18.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>21 Павильон № 58 «Земледелие» («Украина»)</td>
+                                            <td><img src="{% static 'img/58.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>22 Павильон № 57 "Россия - моя история"</td>
+                                            <td><img src="{% static 'img/57.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>23 Павильон № 62 «Охрана природы»</td>
+                                            <td><img src="{% static 'img/62.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>24 Павильон №61 «Центросоюз»</td>
+                                            <td><img src="{% static 'img/61.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>25 Павильон № 20 «Химическая промышленность»</td>
+                                            <td><img src="{% static 'img/20.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>26 Павильон № 21 «Выставка-реконструкция «Терракотовая армия»</td>
+                                            <td><img src="{% static 'img/21.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>27 Павильон № 25 «Нефтяная промышленность»</td>
+                                            <td><img src="{% static 'img/25.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>28 Строящийся аквапарк с океанариумом</td>
+                                            <td><img src="{% static 'img/океан.jpg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>30 Площадь Промышленности</td>
+                                            <td><img src="{% static 'img/площадь.jpeg' %}" width="300"></td>
+
                                         </tr>
                                         <tr>
                                             <td>31 Павильон № 26 «Транспорт»</td>
+                                            <td><img src="{% static 'img/26.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>32 Павильон № 32 «Космос»</td>
+                                            <td><img src="{% static 'img/32.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>33 Павильон № 55 «Электрификация»</td>
+                                            <td><img src="{% static 'img/55.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>34 Павильон № 29 «Цветоводство и озеленение»</td>
+                                            <td><img src="{% static 'img/29.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>35 Павильон № 52-53 «Механизация»</td>
+                                            <td><img src="{% static 'img/52.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>36 Недействующий ресторан «Золотой Колос»</td>
+                                            <td><img src="{% static 'img/ресторан.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
-                                            <td>37 Павильон № 36 «Переработка продукции сельского хозяйства»</td>
+                                            <td>37 Павильон № 36 «Музей кино»</td>
+                                            <td><img src="{% static 'img/36.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>38 Павильон № 38 Выставочно-аквариальный комплекс</td>
+                                            <td><img src="{% static 'img/38.jpeg' %}" width="300"></td>
                                         </tr>
                                         <tr>
                                             <td>39 Частный особняк Якубова Якума Мелик Садых-оглы</td>
+                                            <td><img src="{% static 'img/39.jpeg' %}" width="300"></td>
                                         </tr>
                                     </table>
                                 </div>
