--- a/first/templates/points_route.html
+++ b/first/templates/points_route.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
 <div class="container">
-    <center>
-        <div class="row mt-5">
+        <div class="row mt-3">
+            {% if request.method == "GET" %}
             <center>
-                <div class="col-5">
+            {% endif %}
+                <div class="col-8">
+                    <center>
                     <div class="card border-danger">
                         <div class="row mt-5">
                             <div class="col">
-                                <img src="https://sun9-70.userapi.com/impg/OgJp2vdmQjbzn6KjnpR7ZkNpbBKjoZ8qhB_PTw/_K7d9t64Jec.jpg?size=1240x1690&quality=96&sign=1f1ebe51b05c13257df37414eec9f974&type=album"
-                                     class="card-img-top border-danger-subtle bg-danger-subtle" alt="">
+                                <img src="{% static 'img/map.jpeg' %}" class="card-img-top border-danger-subtle bg-danger-subtle" alt="">
                             </div>
                         </div>
                         <div class="card-body">
@@ -43,10 +45,21 @@
                                 </form>
                             </div>
                         </div>
-                        {% if request.method == "POST" %}
-                        <div class="mb-3 row">
-                            <div class="col">
-                                <p>{{ dist }}</p>
+                    </div>
+                    </center>
+                </div>
+            {% if request.method == "GET" %}
+            </center>
+            {% endif %}
+                {% if request.method == "POST" %}
+                    <div class="col-4">
+                        <center>
+                        <div class="card border-danger">
+                            <div class="card-body">
+                            </div>
+                            <div class="mb-3 row">
+                                <div class="col">
+                                    <p>{{ dist }}</p>
                                 <center>
                                     <ul class="list-group list-group-flush">
                                         {% for i in way_arr %}
@@ -56,14 +69,13 @@
                                         {% endfor %}
                                     </ul>
                                 </center>
+                                </div>
                             </div>
                         </div>
-                        {% endif %}
+                        </center>
                     </div>
-                </div>
-            </center>
+                {% endif %}
         </div>
-    </center>
 </div>
 
 {% endblock %}
