--- a/first/templates/time_route.html
+++ b/first/templates/time_route.html
@@ -2,68 +2,81 @@
 {% block content %}
 {% load static %}
 <div class="container">
-    <center>
-        <div class="row mt-3">
-            <center>
-                <div class="col-8">
-                    <div class="card border-danger">
-                        <div class="row mt-5">
-                            <div class="col">
-                                <img src="{% static 'img/map.jpeg' %}" class="card-img-top border-danger-subtle bg-danger-subtle" alt="">
-                            </div>
+    <div class="row mt-3">
+        {% if request.method == "GET" %}
+        <center>
+        {% endif %}
+            <div class="col-8">
+                <center>
+                <div class="card border-danger">
+                    <div class="row mt-5">
+                        <div class="col">
+                            <img src="{% static 'img/map.jpeg' %}"
+                                 class="card-img-top border-danger-subtle bg-danger-subtle" alt="">
                         </div>
-                        <div class="card-body">
-                            <h5 class="card-title"><b class="text-danger-emphasis">Создание маршрута</b></h5>
-                        </div>
-                        <div class="mb-3 row">
-                            <div class="col">
-                                <form action="{% url 'time_route' %}" method="post">
-                                    {% csrf_token %}
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title"><b class="text-danger-emphasis">Создание маршрута</b></h5>
+                    </div>
+                    <div class="mb-3 row">
+                        <div class="col">
+                            <form action="{% url 'time_route' %}" method="post">
+                                {% csrf_token %}
 
-                                    {% if errors %}
-                                    {{ errors }}
-                                    {% endif %}
-                                    <ul class="list-group list-group-flush">
-                                        {% for field in form %}
-                                        <li class="list-group-item">
-                                            <div class="row">
-                                                <div class="col-6">
-                                                    {{ field.label_tag }}
-                                                </div>
-                                                <div class="col-6">
-                                                    {{ field }}
-                                                </div>
+                                {% if errors %}
+                                {{ errors }}
+                                {% endif %}
+                                <ul class="list-group list-group-flush">
+                                    {% for field in form %}
+                                    <li class="list-group-item">
+                                        <div class="row">
+                                            <div class="col-6">
+                                                {{ field.label_tag }}
                                             </div>
-                                        </li>
-                                        {% endfor %}
-                                        <li class="list-group-item"><input type="submit" value="Создать"
-                                                                           class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle w-25">
-                                        </li>
-                                    </ul>
-                                </form>
-                            </div>
+                                            <div class="col-6">
+                                                {{ field }}
+                                            </div>
+                                        </div>
+                                    </li>
+                                    {% endfor %}
+                                    <li class="list-group-item"><input type="submit" value="Создать"
+                                                                       class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle w-25">
+                                    </li>
+                                </ul>
+                            </form>
                         </div>
-                        {% if request.method == "POST" %}
-                        <div class="mb-3 row">
-                            <div class="col">
-                                <p>{{ dist }}</p>
-                                <center>
-                                    <ul class="list-group list-group-flush">
-                                        {% for i in way_arr %}
-                                        <center>
-                                            <li class="list-group-item" style="width: 18rem;">{{ i }}</li>
-                                        </center>
-                                        {% endfor %}
-                                    </ul>
-                                </center>
-                            </div>
+                    </div>
+                </div>
+                </center>
+            </div>
+        {% if request.method == "GET" %}
+        </center>
+        {% endif %}
+        {% if request.method == "POST" %}
+        <div class="col-4">
+            <center>
+                <div class="card border-danger">
+                    <div class="card-body">
+                    </div>
+                    <div class="mb-3 row">
+                        <div class="col">
+                            <h5><b class="text-danger-emphasis">Маршрут</b></h5>
+                            <center>
+                                <ul class="list-group list-group-flush">
+                                    {% for i in way_arr %}
+                                    <center>
+                                        <li class="list-group-item" style="width: 18rem;">{{ i }}</li>
+                                    </center>
+                                    {% endfor %}
+                                </ul>
+                            </center>
                         </div>
-                        {% endif %}
                     </div>
                 </div>
             </center>
         </div>
-    </center>
+        {% endif %}
+    </div>
 </div>
 
 {% endblock %}
