--- a/first/templates/index.html
+++ b/first/templates/index.html
@@ -5,6 +5,24 @@
             <div class="col">
                 <div class="card border-danger">
                     <div class="card-header border-danger-subtle bg-danger-subtle">
+                        <b class="text-danger-emphasis">Добро пожаловать!</b>
+                    </div>
+                    <div class="card-body">
+                        <div class="mb-3 row mt-3">
+                            <div class="col">
+                                <h3>Мы рады представить вам удобный инструмент, который поможет спланировать ваше посещение популярного московского выставочного комплекса – ВДНХ. С нашей помощью вы сможете легко и быстро создать оптимальный маршрут на территории объекта.
+                                    <br><br>Приятного использования нашего сайта!</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </center>
+        <center><div class="row mt-5">
+            <div class="col">
+                <div class="card border-danger">
+                    <div class="card-header border-danger-subtle bg-danger-subtle">
                         <b class="text-danger-emphasis">Вход в аккаунт</b>
                     </div>
                     <div class="card-body">
